--- a/main.html
+++ b/main.html
@@ -10,7 +10,10 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-
+<div>
+	<p>My current favourite song is Raanjhanaa Hua Mai Tera</p>
+	<a href="https://www.youtube.com/watch?v=vgm1u2gPxzw"></a>
+</div>
 </body>
 
 </html>
