--- a/main.html
+++ b/main.html
@@ -11,8 +11,9 @@
     <script type="text/javascript" src="./script.js">
 </script>
 <div>
-	<p>My current favourite song is Raanjhanaa Hua Mai Tera</p>
-	<a href="https://www.youtube.com/watch?v=vgm1u2gPxzw"></a>
+	<p>My current favourite song is 
+	<a href="https://www.youtube.com/watch?v=vgm1u2gPxzw">Raanjhanaa Hua Mai Tera</a>
+	</p>
 </div>
 </body>
 
